--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "uuidv4": "^6.2.13",
+    "ws": "^8.18.0"
   }
 }
