--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
     "nodemon": "^3.1.9",
-    "socket.io": "^4.8.1",
-    "uuidv4": "^6.2.13",
-    "ws": "^8.18.0"
+    "uuidv4": "^6.2.13"
   }
 }
